fix: make checkmarks functional with optimistic updates and align all sizes to 24px

--- a/src/components/table/TaskTable/TaskTable.css
+++ b/src/components/table/TaskTable/TaskTable.css
@@ -38,7 +38,9 @@
 }
 
 .header-checkbox-icon {
-  font-size: 18px;
+  font-size: 24px;
+  width: 24px;
+  height: 24px;
   color: #B4BBC5;
 }
 
